# acqHelper

./: CMakeLists.txt  README.md
resource/: resources.qrc
src/: Timestamp.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
